// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons it renders 1`] = `
<div>
  <button
    class="sc-dkrFOg kcvRNK"
  />
</div>
`;

exports[`Buttons should accept a size value 1`] = `
<div>
  <button
    class="sc-dkrFOg kcvRNK"
  />
</div>
`;

exports[`Buttons should be disabled 1`] = `
<div>
  <button
    class="sc-dkrFOg hYrvlF"
    disabled=""
  />
</div>
`;

exports[`Buttons should show loading icon and disabled button 1`] = `
<div>
  <button
    class="sc-dkrFOg hYrvlF"
    disabled=""
  >
    <svg
      class="animate-spin stroke-current"
      height="16"
      viewBox="25 25 50 50"
      width="16"
    >
      <circle
        class="stroke-white"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-width="4"
      />
      <circle
        class="stroke-gray-400"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-dasharray="60"
        stroke-dashoffset="-50"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
  </button>
</div>
`;
